[package]
name = "hexagon_game"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.30"
eframe = { version = "0.30", features = ["persistence"] }
egui_extras = "0.30.0"
itertools = "0.13.0"
kira = "0.9.6"
log = "0.4"
serde = { version = "1.0.216", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.134"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

#[workspace]
#members = ['hexagon_sql']
